# vic_iot

./: CMakeLists.txt  README.md
include/: app.h  gpio_interface.h  pi_exceptions.h
logs/: wlan_config_log.txt
pipes/: lan_config_fifo
src/: main.cpp  wlan_edit.py
src/Network_config/: Network_scanner.py
src/Network_tools/: Auth_SSID.py  NMWizard.py  NM_wizard_res.py  NManager.py  NManager_except.py  README.md
src/Network_tools/logs/: NM_Wizard_log.txt
src/archive/: main_arch.cpp
src/gpio/: app.cpp  gpio.c  gpio_interface.c
